--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,5 @@
 # MongoDB Connection - Replace with your actual MongoDB connection string
-MONGO_URI=mongodb://localhost:27017/health-navigator-pro
+MONGO_URI=mongodb://localhost:27017/health-navigator
 
 # JWT Secret - Replace with a strong random string
 JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
