--- a/Backend/.env
+++ b/Backend/.env
@@ -1,17 +1,27 @@
-# MongoDB Connection - Replace with your actual MongoDB connection string
-MONGO_URI=mongodb://localhost:27017/health-navigator
-
-# JWT Secret - Replace with a strong random string
-JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
-
-# Server Port
 PORT=8000
-
-# Frontend URL (for CORS)
-CLIENT_URL=http://localhost:5173
-
-# Email Service (Resend API Key - optional for email features)
-RESEND_API_KEY=your_resend_api_key_here
-
-# Node Environment
+MONGO_URI=mongodb://localhost:27017/health-navigator
+JWT_SECRET=mysecretkey
 NODE_ENV=development
+
+# Frontend URL (for email links)
+FRONTEND_URL=http://localhost:5173
+
+# Email Service (Resend)
+RESEND_API_KEY=re_123456789
+
+# ========================================
+# AI/ML API KEYS
+# ========================================
+
+# Google Gemini (for Multilingual Chat)
+# Get from: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=AIzaSyDpYCjzX7q5b0D8ndos-byCgy7WIsSPcEs
+
+# OpenAI (for Speech-to-Text (Whisper) and Text-to-Speech)
+# Get from: https://platform.openai.com/api-keys
+OPENAI_API_KEY=your_openai_api_key_here
+
+# Google Cloud (for Speech-to-Text and Text-to-Speech - OPTIONAL)
+# Get from: https://console.cloud.google.com/apis/credentials
+# This should be a path to your JSON credentials file
+GOOGLE_APPLICATION_CREDENTIALS=path/to/your/google-credentials.json
